Merge prepped version from tag fullstory-flutter-v0.7.0